# lantern

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: ask.py  ingest_asana.py  ingest_folder.py  prioritize_asana.py
src/lantern/: __init__.py  chunking.py  config.py  documents.py  embeddings.py  ingest.py  llm.py  rag.py  vectorstore.py
src/lantern/loaders/: __init__.py  asana.py
